# monovm-embed-sample

./: CMakeLists.txt  DETAILS.md  README.md
src/: CMakeLists.txt
src/CsharpSample/: CMakeLists.txt  CSharpSample.cs  CsharpSample.csproj  MyRoots.xml
src/GetRuntimePack/: CMakeLists.txt  GetRuntimePack.csproj  copy_runtime.cmake  gen_lib_mingw.cmake  gen_lib_msvc.cmake
src/native/: CMakeLists.txt  gen_managed.cmake  main.c  main.cpp
